# Qt_app_plugin_example

./: README.md
LightSensorPlugin/: CMakeLists.txt  lightsensorplugin.cpp  lightsensorplugin.h
SensorCapture/: CMakeLists.txt  application.cpp  application.h  main.cpp  plugininterface.h
TempSensorPlugin/: CMakeLists.txt  tempsensorplugin.cpp  tempsensorplugin.h
